no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
@@ -40,7 +40,7 @@ VERSION ==>                       #6.2.0
                                   #Browser, Node.js or CLI
                                   #JavaScript parser and tokenizer
 
-AST FORMAT ==>                    #ESTREE
+AST FORMAT ==>                    #ESTree
                                   #Does not support yet: "Import" (import(...))
                                   #Only supported through plugins: decorators
 
@@ -56,15 +56,19 @@ SPEED ==>                         #Tokenizer: 4000 tokens per ms
                                              \=+===============================+=/
 
 
-ACORN.parse('JS'[, OPTS])         #JavaScript parser, using ESTree as AST format (see its doc)
-->PROGRAM_NODE                    #Errors raise SyntaxError, with ERROR.pos NUM (offset) and loc.line|column NUM
+ACORN.parse('JS'[, OPTS])         #Parse JavaScript.
+ ->PROGRAM_NODE                   #Errors raise SyntaxError, with ERROR:
+                                  #  - pos NUM (offset)
+                                  #  - loc.line|column NUM
                                   #OPTS:
                                   #  - ecmaVersion 3|5-10 or 2015-2019 (def: 2018)
                                   #  - sourceType 'script|module' (def: 'script')
-                                  #  - preserveParens BOOL: parse parenthesis as EXPR_NODE, type 'ParenthesizedExpression'
-                                  #    with property expression EXPR2_NODE, instead of ignoring them
-                                  #  - onComment(BOOL, STR, NUM, NUM2):
-                                  #     - called on comments with: BOOL (// vs /* */), STR (text), START_OFFSET, END_OFFSET
+                                  #  - preserveParens BOOL:
+                                  #     - parse parenthesis instead of ignoring them
+                                  #     - child of EXPR, type 'ParenthesizedExpression': expression EXPR2
+                                  #  - onComment(BOOL, STR, START_OFFSET_NUM, END_OFFSET_NUM):
+                                  #     - called on comments
+                                  #     - BOOL is // vs /* */
                                   #     - can also be an ARR to push elements on ARR, but with a slighly different format
                                   #       mimicing Esprima, e.g. to use with Escodegen
                                   #  - onToken(TOKEN):
