no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -621,6 +621,7 @@ transform-typescript              #Transpile TypeScript:
                                   #  - without --importHelpers, inline helpers in each file instead of shared
                                   #PLUGIN_OPTS:
                                   #  - isTSX BOOL (def: if *.tsx)
+                                  #  - jsxPragma STR (def: 'React'): like tsc --jsxFactory
 
 JSX ==>                           #See JSX doc
 
