no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/estree.format.txt
@@ -402,9 +402,9 @@ TYPE                              #Type 'typeAnnotation' (TypeScript|Flow)
                                   #TYPE_VAR or TYPE_EXPR
 
 VAR: TYPE
-function (): TYPE {}
+function (VAR: TYPE): TYPE {}
 ...VAR: TYPE                      #TYPE assertion
-{...}: TYPE                       #On IDENTIFIER|FUNC|REST_ELEMENT|OBJ_PATTERN|ARR_PATTERN:
+{...}: TYPE                       #On IDENTIFIER|FUNC|REST_ELEMENT|OBJ_PATTERN|ARR_PATTERN|ASSIGNMENT_PATTERN:
 [...]: TYPE                       #  - [typeAnnotation TYPE_ANNOTATION]
 
 
@@ -428,9 +428,6 @@ TYPE                              #TS_TYPE. TypeScript TYPE
                                   #TS_INDEXED_ACCESS_TYPE, TS_MAPPED_TYPE, TS_*_KEYWORD, TS_LITERAL_TYPE, TS_OPTIONAL_TYPE,
                                   #TS_TYPE_LITERAL, TS_EXPRESSION_WITH_TYPE_ARGUMENTS, TS_FUNCTION_TYPE, TS_CONSTRUCTOR_TYPE,
                                   #TS_ARRAY_TYPE, TS_REST_TYPE, TS_TUPLE_TYPE, TS_UNION_TYPE, TS_INTERSECTION_TYPE
-
-...: TYPE                         #TS_TYPE_ANNOTATION. TypeScript TYPE assertion:
-                                  #  - typeAnnotation TS_TYPE
 
 TYPE_VAR                          #TS_ENTITY_NAME. Child of IDENTIFIER, for a TS_TYPE.
                                   #TYPE_VAR identifier itself.
@@ -575,17 +572,35 @@ TYPE | TYPE2                      #Child of TS_TYPE, type 'TSUnionType':
 TYPE & TYPE2                      #Child of TS_TYPE, type 'TSIntersectionType':
                                   #  - types TS_TYPE_ARR
 
-type TYPE<T...> = ...             #Type 'TSTypeParameterDeclaration':
-class CLASS<T...> {}              #  - params TS_TYPE_PARAMETER_ARR
-interface INTERFACE<T,...> {}     #On TS_TYPE_ALIAS_DECLARATION|CLASS_DECLARATION|TS_INTERFACE_DECLARATION|
-[new] <T...>(...) => ...          #TS_FUNCTION_TYPE|TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
-{ FUNC<T...>(...): ... }          #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
-{ [new] <T...>(...): ... }        #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
+type TYPE<T...> = ...
+class CLASS<T...> {}
+interface INTERFACE<T,...> {}     #Type 'TSTypeParameterDeclaration':
+[new] <T...>(...) => ...          #  - params TS_TYPE_PARAMETER_ARR
+{ FUNC<T...>(...): ... }          #On FUNCTION_DECLARATION|ARROW_FUNCTION_EXPRESSION|CLASS_DECLARATION|OBJECT_METHOD
+{ [new] <T...>(...): ... }        #TS_TYPE_ALIAS_DECLARATION|TS_INTERFACE_DECLARATION|
+function <T,...>(...) {...}       #TS_FUNCTION_TYPE|TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
+<T,...>(...) => ...               #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
+{ FUNC<T,...>(...) {} }           #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
  T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
  T in TYPE3                       #  - [name STR]
                                   #  - [constraint TYPE3]
                                   #  - [default TYPE4]
 TYPE<TYPE2_VAR,...>               #Type 'TSTypeParameterInstantiation':
                                   #  - params TS_TYPE_ARR
-                                  #On TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
+                                  #On CALL_EXPRESSION|NEW_EXPRESSION|TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
                                   #  - [typeParameters TS_TYPE_PARAMETERS_INSTANTIATION]
+
+<TYPE>VAL                         #Child of EXPR, type 'TSTypeAssertion':
+                                  #  - typeAnnotation TS_TYPE
+                                  #  - expression EXPR
+VAL as TYPE                       #Child of EXPR, type 'TSAsExpression':
+                                  #  - typeAnnotation TS_TYPE
+                                  #  - expression EXPR
+
+...: TYPE                         #Child of TYPE_ANNOTATION, type 'TSTypeAnnotation'
+                                  #  - typeAnnotation TS_TYPE
+                                  #TypeScript TYPE assertion
+
+function(...): TYPE2 {}
+(...): TYPE2 => ...               #On FUNCTION_DECLARATION|ARROW_FUNCTION_EXPRESSION|OBJECT_METHOD:
+{ FUNC(...): TYPE2 {} }           #  - [returnType TYPE_ANNOTATION]
