no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/acorn.javascript_cli.txt
@@ -5,18 +5,36 @@
 
 
 
-ALTERNATIVES ==>                  #  - esprima: maintained by jQuery, historic main parser.
-                                  #    Least support for new ES syntax, uses ESTree, most stable, least active
-                                  #  - acorn:
-                                  #    Uses ESTree, most utilities functions, good plugin system
-                                  #  - @babel/parser: fork of acorn, used by Babel
-                                  #    Supports Flow, most support for new ES syntax, uses slightly different ESTree,
-                                  #    least utilities functions, least stable, most active, twice slower
-                                  #  - espree: based on acorn (but produces Esprima format), used by ESLint
-                                  #    Uses ESTree, most convenient, three times slower
-                                  #    Supposedly fix some acorn bugs, but those are fixed now.
-                                  #    Uses non-standard additions, where acorn has now implemented those features.
-                                  #Prefer acorn
+ALTERNATIVES ==>                  #  - esprima:
+                                  #     - from jQuery, historic main parser.
+                                  #     - uses ESTree
+                                  #     - least support for ES6 syntax
+                                  #     - not maintained
+                                  #  - acorn (preferred):
+                                  #     - uses ESTree
+                                  #     - most utilities functions, good plugin system
+                                  #  - @babel/parser:
+                                  #     - fork of acorn, used by Babel
+                                  #     - uses slightly different ESTree
+                                  #     - supports Flow, TypeScript, ES proposals
+                                  #     - least utilities functions
+                                  #     - most active
+                                  #  - espree:
+                                  #     - based on acorn (but produces Esprima format), used by ESLint
+                                  #     - uses ESTree
+                                  #     - most convenient
+                                  #     - uses non-standard additions, where acorn has now implemented those features.
+                                  #  - typescript-estree:
+                                  #     - uses TSESTree, used by typescript-eslint (former tslint)
+                                  #     - supports TypeScript
+                                  #  - meriyah
+                                  #     - based on cherow
+                                  #  - buntis:
+                                  #     - based on cherow
+                                  #     - TypeScript focused
+                                  #     - project too young at the moment
+                                  #  - cherow:
+                                  #     - not maintained
 
 VERSION ==>                       #6.2.0
                                   #Browser, Node.js or CLI
