no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -47,7 +47,7 @@ any                               #NODE:
                                   #  - all redefine type STR, except if abstract types themselves
 
 EXPR                              #EXPR
-                                M##  - raw STR
+                                B##  - raw STR
 
 
                                              /=+===============================+=\
