--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
@@ -12,6 +12,7 @@ VERSION ==>                       #6.0.0
 
 DIFFERENCES FROM ACORN ==>        #Built on top of acorn but:
                                   #  - OPTS: different names and fewer options
+                                  #  - no plugins
                                   #  - TOP_NODE.comments instead of OPTS.onComment()
                                   #  - trim whitespaces|comments for PROGRAM.loc|range
                                   #  - TOKENs use Esprima format
