no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -1164,7 +1164,14 @@ DIFFERENCE FROM JAVASCRIPT ==>    #  - types: declarations, assertions, declare
 --emitDecoratorMetadata           #Allow Reflect.metadata (ES stage 0 proposal)
 
 *.JS TYPING ==>                   #*.js can be imported but are untyped (any) by default.
---allowJs                         #Use type inference of *.js exported values
+--allowJs                         #Use type inference of *.js exported values.
+                                  #Type inferences differences:
+                                  #  - OBJ additional properties always allowed
+                                  #  - FUNC argument optional (?)
+                                  #  - `null|undefined` TYPE -> `any`
+                                  #  - [] -> `any[]` (instead of `never[]`)
+                                  #Can do type assertions with JSDoc, which removes all differences above.
+                                  #Also transpile *.js
 --checkJs                         #Also do type checking inside *.js
 // @ts-[no]check                  #Use|ignore --checkJs on current file
 --maxNodeModuleJsDepth NUM        #Run --allowJs (if enabled) on imported 'MODULE' (instead of only 'PATH') providing:
@@ -1173,7 +1180,32 @@ DIFFERENCE FROM JAVASCRIPT ==>    #  - types: declarations, assertions, declare
                                   #Also run --checkJs (if enabled), but not recommended, as most *.js 'MODULE' will report errors.
                                   #Def: 0 (disabled)
 
-JSDOC COMMENTS ==>                #Can be used for typecasting in *.js
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
+                                            )==:             JSDOC             :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+JSDOC COMMENTS ==>                #Can be used for type assertions in *.js (for --allowJs|checkJs)
+                                  #When comment is:
+                                  #  - on line before: does not bypass transtyping rules (like QUAL VAR: TYPE)
+                                  #  - inline before value: bypasses transtyping rules (like <TYPE>)
+
+TYPE                              #TYPE in @TAG can be either JSDoc TYPE or TypeScript TYPE
+
+@TAG                              #Only the following tags are allowed
+@typedef {TYPE} TYPE2
+@type {TYPE}
+@enum [{TYPE}]
+@param [{TYPE}] VAR [- COMMENT]
+@returns [{TYPE}] [COMMENT]
+@callback TYPE
+@class                            #Like JSDoc
+@this {TYPE}
+@augments {TYPE}                  #Like JSDoc but slight different syntax
+@template [{TYPE3}] T,... [- CMNT]#Generic <T [extends TYPE3],...> parameter
 
 
                                              /=+===============================+=\
