no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #7.4.5
+VERSION ==>                       #7.5.0
 
 GOAL ==>                          #JavaScript source code transformation
 
@@ -555,17 +555,15 @@ proposal-json-strings             #U+2028|2029 allowed in STR
 transform-named-capturing-groups-
  regex                            #(?<GROUP>) \k<GROUP>
 
+STAGE 4 ==>                       #
+syntax-dynamic-import
+proposal-dynamic-import           #import(...)
+
 STAGE 3 ==>                       #
 syntax-class-properties
 proposal-class-properties         #class { [static] VAR = VAL }
 proposal-private-methods          #class { [static] #VAR = VAL }
 syntax-bigint                     #NUMn (syntax-only)
-syntax-dynamic-import             #import(...) (syntax-only)
-babel-plugin-dynamic-import-node ##import(...) for Node.js
-                                 ##PLUGIN_OPTS:
-                                 ##  - noInterop BOOL (def: false)
-                                 ##For browsers, handled natively by Webpack
-                                 ##Version 2.3.0
 syntax-import-meta                #import.meta (syntax-only)
 
 STAGE 2 ==>                       #
