no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -517,6 +517,8 @@ NewableFunction                   #Same but for a constructor.
                                   #VAR names are not significant.
                                   #Argument TYPEs are only checked inside body during declaration statement
                                   #  - not when FUNC is transtyped after declaration
+                                  #  - not when FUNC(...VAL) is called
+                                  #     - but VAL are checked against argument TYPEs
 { FUNC(...): TYPE2 }              #OBJ.FUNC: shortcut for { FUNC: (...) => TYPE2 }
 { (...): TYPE2, ... }             #FUNC with OBJ properties
 
@@ -760,6 +762,7 @@ TRANSTYPING RULES ==>             #For TYPE2 <-- TYPE, TYPE2 must be contravaria
 TYPE INFERENCE ==>                #Only needed for untyped values:
                                   #  - i.e. not needed for JavaScript operators (including =) since their types is known
                                   #Done usually bottom-up, but sometimes top-down ("contextual typing")
+                                  #  - for return values, but not for FUNC parameters
                                   #Untyped 'MODULE' dependency:
                                   #  - i.e. without TypeScript TYPEs, and --allowJs --maxNodeModuleJsDepth was not used
                                   #  - use any
