no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/ts-node.node.txt
@@ -1,6 +1,42 @@
 
-             
-   TS-NODE   
-             
+           
+   TS-NODE  
+           
 
 
+
+
+register([OPTS])->REGISTER
+
+REGISTER.compile
+ ('TYPESCRIPT', 'FILENAME'[, NUM])
+ ->'JAVASCRIPT'
+                                  #NUM is line offset
+REGISTER.getTypeInfo
+ ('TYPESCRIPT', 'FILENAME', NUM)  #NUM is byte offset
+ ->OBJ                            #OBJ: name 'TYPE', comment STR
+REGISTER.cwd                      #'DIR'
+REGISTER.extensions               #'EXT'_ARR
+REGISTER.ts.*                     #Helpers from TypeScript core
+
+OPTS.files                        #BOOL
+OPTS.pretty                       #BOOL
+OPTS.compiler                     #STR
+OPTS.compilerOptions              #OBJ
+OPTS.ignore                       #STR_ARR
+OPTS.project                      #STR
+OPTS.skipIgnore                   #BOOL
+OPTS.skipProject                  #BOOL
+OPTS.preferTsExts                 #BOOL
+OPTS.ignoreDiagnostics            #STR|NUM_ARR
+OPTS.typeCheck                    #BOOL
+OPTS.transpileOnly                #BOOL
+OPTS.logError                     #BOOL
+OPTS.readFile('PATH')[->STR]      #
+OPTS.fileExists('PATH')->BOOL     #
+OPTS.transformers                 #
+
+TS_NODE_*                         #STR. For any option, e.g. TS_NODE_COMPILER_OPTIONS
+                                  #BOOL -> '0|1'
+                                  #ARR -> 'STR,...'
+                                  #OBJ -> 'JSON'
