--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -701,8 +701,8 @@ finished(STREAM[, OPTS], FUNC([ERROR]))      10*#Call FUNC([ERROR]) when STREAM 
 END-OF-STREAM(...)                             ##Ponyfill for finished() (1.4.1)
 ON-FINISHED(...)                               ##Similar but slightly different, i.e. not preferred (2.3.0)
 
-pipeline(ISTREAM|OSTREAM[_ARR]...            10*#Like finished(STREAM.pipe(STREAM2).pipe(...), ...)
- [, FUNC(ERROR)])->PROMISE                   10*#Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
+pipeline(ISTREAM|OSTREAM[_ARR]...,           10*#Like finished(STREAM.pipe(STREAM2).pipe(...), ...)
+ FUNC(ERROR))->PROMISE                       10*#Also if one STREAM errors then other STREAM are closed (with STREAM.close|abort|destroy())
 PUMP(...)                                      ##Ponyfill for pipeline() (3.0.0)
 
 IOSTREAM ==>                                    #Implement both ISTREAM and OSTREAM. Actually called either:
