no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -15,6 +15,9 @@ TYPESCRIPT/FLOW ==>               #See TSESTree
 
 PULL REQUESTS ==>                -#Marked like this
 
+@BABEL/PARSER ==>                B#Marked like this
+ACORN ==>                       aA#Marked like this (lowercase to mean "not present")
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -28,7 +31,7 @@ OPTIONAL VALUES ==>               #Are either defined or null
 any                               #NODE:
                                   #  - type STR
                                   #  - [loc] (position in source code):
-                                  #     - [source STR]
+                                 a#     - [source STR]
                                   #     - start|end:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
@@ -68,7 +71,10 @@ NON_TOKEN                        -#CST node not present in AST:
                                              \=+===============================+=/
 
 
-FILE                              #Type 'Program':
+FILE                              #Type 'File':
+                                  #  - program PROGRAM
+                                  #  - [name STR]
+PROGRAM                           #Type 'Program':
                                   #  - sourceType 'script|module'
                                   #  - body STATEMENT|MODULE_DECLARATION_ARR
 STATEMENT                         #
@@ -76,16 +82,32 @@ STATEMENT                         #
 EXPR_STATEMENT                    #Statement with single EXPR.
                                   #Child of STATEMENT, type 'ExpressionStatement':
                                   #  - expression EXPR
-'use strict';                     #Child of EXPR_STATEMENT, type 'Directive':
-                                  #  - expression LITERAL
+#!/bin/bash                      B#Type 'InterpreterDirective'
+                                 B#  - value STR
+                                 B#On PROGRAM:
+                                 B#  - interpreter INTERPRETER_DIRECTIVE
+'use strict'                      #Child of EXPR_STATEMENT:
                                   #  - directive STR
+                                  #  - expression LITERAL
+                                 B#Type 'Directive':
+                                 B#  - value STR
+                                 B#  - extra.raw[Value] STR
+                                 B#On PROGRAM:
+                                 B#  - directives DIRECTIVE_ARR
 ;                                 #Empty statement, with only semicolon
                                   #Child of STATEMENT, type 'EmptyStatement'
 {...}                             #Child of STATEMENT, type 'BlockStatement':
                                   #  - body STATEMENT_ARR
 
-// COMMENT
-/* COMMENT */                     #Ignored
+// COMMENT                        #On NODE:
+/* COMMENT */                     #  - [comments COMMENT_ARR]
+                                 B#  - [leadingComment|trailingComments COMMENT_ARR]
+                                  #On PROGRAM:
+                                  #  - comments COMMENT_ARR
+                                  #COMMENT:
+                                  #  - type 'Line|Block'
+                                 B#  - type 'CommentLine|Block'
+                                  #  - value STR
 
 
                                              /=+===============================+=\
